# libtextcat

./: .gitignore  Makefile  Makefile.am  README  TODO  config.status  configure  configure.ac  libtextcat.pc.in  libtool
.pc/: applied-patches
.pc/debian-changes-2.2-8/src/: fingerprint.c
.pc/libtextcat-2.2-OOo.patch/src/: Makefile.am  fingerprint.c  textcat.c  textcat.h
autom4te.cache/: output.0  requests  traces.0
debian/: changelog  control  copyright  fpdb.conf  libtextcat-data.install  libtextcat-dev.install  libtextcat0.install  libtextcat0.lintian-overrides  libtextcat0.symbols  rules
debian/patches/: autogen.diff  debian-changes-2.2-8  libtool_1.4.diff
debian/source/: lintian-overrides
langclass/: conf.txt
langclass/LM/: arabic-utf_8.lm  armenian-utf_8.lm  belarus-utf_8.lm  bulgarian-utf_8.lm  esperanto-utf_8.lm  hungarian-utf_8.lm
src/: Makefile  Makefile.am  Makefile.in  common.c  common.h  config.h  config.h.in  fingerprint.c  fingerprint.h  my_createfp.cxx  my_tests.cxx  ranks.hxx  textcat++.cxx  textcat++.hxx  textcat.c  textcat.cxx  textcat.h  utf_codecs.hxx
src/.deps/: common.Plo  createfp.Po  fingerprint.Plo  testtextcat.Po  textcat.Plo  utf8misc.Plo  wg_mempool.Plo
